[package]
name = "waylock"
version = "0.3.3"

authors = ["Isaac Freund <ifreund@ifreund.xyz>"]
description = "A simple screenlocker for wayland compositors."
edition = "2018"
keywords = ["wayland", "screenlocker"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ifreund/waylock"

include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "waylock.toml",
    "**/*.rs",
]

[dependencies]
smithay-client-toolkit = { version = "0.10", default-features = false, features = ["calloop"] }
serde = { version = "1", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
humantime = "2"
fontdue = "0.6"
chrono = "0.4"
users = "0.10"
nix = "0.23"
toml = "0.5"
pam = "0.7"
clap = "2"
